// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`En tant qu'utilisateur je veux extraire le contenu d'un train de paye au format PDF pour l'analyser. Le script devrait pouvoir... extraire le contenu d'un fichier PDF avec trois feuilles de paye : d'une page, de deux pages et d'une page 1`] = `
Object {
  "cf3fd7e4c71c167bdd7bae14b184b297": Array [
    Array [
      "FAUX BULLETIN #1",
      "PAGE DU BULLETIN #1",
      "PAGE DU TRAIN DE PAYE #1",
      "4",
      "5",
      "6",
      "7",
      "01-01-2020 - 31-01-2020",
      "9",
      "NOM1",
      "11",
      "12",
      "NUMSECU1",
      "CLESECU1",
      "15",
      "16",
      "17",
    ],
    Array [
      "FAUX BULLETIN #2",
      "PAGE DU BULLETIN #1",
      "PAGE DU TRAIN DE PAYE #2",
      "4",
      "5",
      "6",
      "7",
      "01-01-2020 - 31-01-2020",
      "9",
      "NOM2",
      "11",
      "12",
      "NUMSECU2",
      "CLESECU2",
      "15",
      "16",
      ".../...",
    ],
    Array [
      "FAUX BULLETIN #2",
      "PAGE DU BULLETIN #2",
      "PAGE DU TRAIN DE PAYE #3",
      "4",
      "5",
      "6",
      "7",
      "01-01-2020 - 31-01-2020",
      "9",
      "NOM2",
      "11",
      "12",
      "NUMSECU2",
      "CLESECU2",
      "15",
      "16",
      "17",
    ],
    Array [
      "FAUX BULLETIN #3",
      "PAGE DU BULLETIN #1",
      "PAGE DU TRAIN DE PAYE #4",
      "4",
      "5",
      "6",
      "7",
      "01-01-2020 - 31-01-2020",
      "9",
      "NOM3",
      "11",
      "12",
      "NUMSECU3",
      "CLESECU3",
      "15",
      "16",
      "17",
    ],
  ],
}
`;

exports[`En tant qu'utilisateur je veux extraire le contenu d'un train de paye au format PDF pour l'analyser. Le script devrait pouvoir... extraire le contenu d'un fichier PDF avec une feuille de paye d'une page 1`] = `
Object {
  "c6c15e992c218e8a9138a04e0cb0c27f": Array [
    Array [
      "FAUX BULLETIN #1",
      "PAGE DU BULLETIN #1",
      "PAGE DU TRAIN DE PAYE #1",
      "4",
      "5",
      "6",
      "7",
      "01-01-2020 - 31-01-2020",
      "9",
      "NOM1",
      "11",
      "12",
      "NUMSECU1",
      "CLESECU1",
      "15",
      "16",
      "17",
    ],
  ],
}
`;

exports[`En tant qu'utilisateur je veux extraire le contenu d'un train de paye au format PDF pour l'analyser. Le script devrait pouvoir... extraire le contenu d'un fichier PDF avec une feuille de paye de trois pages 1`] = `
Object {
  "dabedf944505b06aa3a7b889e3ba0231": Array [
    Array [
      "FAUX BULLETIN #1",
      "PAGE DU BULLETIN #1",
      "PAGE DU TRAIN DE PAYE #1",
      "4",
      "5",
      "6",
      "7",
      "01-01-2020 - 31-01-2020",
      "9",
      "NOM1",
      "11",
      "12",
      "NUMSECU1",
      "CLESECU1",
      "15",
      "16",
      ".../...",
    ],
    Array [
      "FAUX BULLETIN #1",
      "PAGE DU BULLETIN #2",
      "PAGE DU TRAIN DE PAYE #2",
      "4",
      "5",
      "6",
      "7",
      "01-01-2020 - 31-01-2020",
      "9",
      "NOM1",
      "11",
      "12",
      "NUMSECU1",
      "CLESECU1",
      "15",
      "16",
      ".../...",
    ],
    Array [
      "FAUX BULLETIN #1",
      "PAGE DU BULLETIN #3",
      "PAGE DU TRAIN DE PAYE #3",
      "4",
      "5",
      "6",
      "7",
      "01-01-2020 - 31-01-2020",
      "9",
      "NOM1",
      "11",
      "12",
      "NUMSECU1",
      "CLESECU1",
      "15",
      "16",
      "17",
    ],
  ],
}
`;
